Fixes player moving out of bounds

--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ body, p, h1 {
 }
 
 .player {
-	bottom: 0;
+	bottom: 0.1rem;
 	width: 1rem;
 	height: 1rem;
 	background-color: teal;
